@@ -33,9 +33,6 @@
 #define TWITTER_EVERY_REPLIES_COUNT 200
 #define TWITTER_EVERY_DMS_COUNT 200
 
-#define TWITTER_TIMELINE_REFRESH_DEFAULT 1
-#define TWITTER_LIST_REFRESH_DEFAULT 1
-
 #define TWITTER_HOME_TIMELINE_INITIAL_COUNT 200
 #define TWITTER_HOME_TIMELINE_PAGE_COUNT 200
 
